# wasi-http-info

./: .devcontainer.json  .gitignore  Cargo.toml  Makefile  README.md  install.sh
src/: bindings.rs  lib.rs  routes.rs
src/routes/: base.rs  environment.rs  mod.rs  version.rs
tests/: Cargo.toml
tests/src/: helper.rs  lib.rs
wit/: world.wit
