[package]
name = "harness"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.3", features = ["client", "tokio"] }
tokio = { version = "1.37.0", features = ["rt", "macros", "io-util"] }
